interstellar/tests/gql/snapshots/gql__snapshots__parse_aggregation_query_snapshot.snap
---
source: tests/gql/snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: o
            labels:
              - Order
            properties: []
            where_clause: ~
        - Edge:
            variable: ~
            labels:
              - CONTAINS
            direction: Outgoing
            quantifier: ~
            properties: []
            where_clause: ~
        - Node:
            variable: p
            labels:
              - Product
            properties: []
            where_clause: ~
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause:
  expression:
    BinaryOp:
      left:
        Property:
          variable: o
          property: date
      op: Gt
      right:
        Literal:
          String: 2024-01-01
call_clauses: []
let_clauses: []
with_clauses: []
return_clause:
  distinct: false
  items:
    - expression:
        Property:
          variable: p
          property: category
      alias: ~
    - expression:
        Aggregate:
          func: Count
          distinct: false
          expr:
            Variable: "*"
      alias: orderCount
    - expression:
        Aggregate:
          func: Sum
          distinct: false
          expr:
            Property:
              variable: o
              property: total
      alias: revenue
group_by_clause: ~
having_clause: ~
order_clause:
  items:
    - expression:
        Variable: revenue
      descending: true
limit_clause:
  limit: 10
  offset: ~
