interstellar/tests/gql/snapshots/gql__snapshots__parse_alter_edge_type_allow_additional_snapshot.snap
---
source: tests/gql/snapshots.rs
expression: stmt
---
Ddl:
  AlterEdgeType:
    name: KNOWS
    action: AllowAdditionalProperties
