interstellar/tests/gql/snapshots/gql__snapshots__parse_case_insensitive_keywords_snapshot.snap
---
source: tests/gql/snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: n
            labels:
              - Person
            properties: []
            where_clause: ~
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause:
  expression:
    BinaryOp:
      left:
        Property:
          variable: n
          property: age
      op: Gt
      right:
        Literal:
          Int: 21
call_clauses: []
let_clauses: []
with_clauses: []
return_clause:
  distinct: false
  items:
    - expression:
        Variable: n
      alias: ~
group_by_clause: ~
having_clause: ~
order_clause:
  items:
    - expression:
        Property:
          variable: n
          property: name
      descending: false
limit_clause:
  limit: 10
  offset: ~
